--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "url": "https://github.com/aramk/tz-date.git"
   },
   "dependencies": {
-    "moment-timezone": "^0.3.1",
+    "moment-timezone": "^0.5.13",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "chai": "^1.9.2",
-    "coffee-script": "^1.9.1",
-    "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.12",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-coffee": "^0.12.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-docco": "^0.3.3",
-    "grunt-mocha-test": "^0.12.1",
-    "grunt-node-inspector": "^0.1.5",
-    "grunt-shell": "^1.1.1",
-    "load-grunt-tasks": "~0.2.1",
-    "mocha": "^1.21.5",
-    "requirejs": "~2.1.11",
-    "shelljs": "^0.3.0"
+    "chai": "^3.5.0",
+    "coffee-script": "^1.12.5",
+    "grunt": "^1.0.1",
+    "grunt-cli": "~1.2.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-coffee": "^1.0",
+    "grunt-contrib-copy": "~1.0",
+    "grunt-docco": "^0.5.0",
+    "grunt-mocha-test": "^0.13.2",
+    "grunt-node-inspector": "^0.4.2",
+    "grunt-shell": "^2.1.0",
+    "load-grunt-tasks": "~3.5.2",
+    "mocha": "^3.3.0",
+    "requirejs": "~2.3.3",
+    "shelljs": "^0.7.7"
   },
   "scripts": {
     "prepublish": "grunt build",
